# ServeHub

./: .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CONTRIBUTING.md  Cheatsheet.md  INSTALLATION_GUIDE.md  LICENSE  NOTES.md  README.md  docker-compose.dev.yaml  requirements.txt  run.py
scripts/: gitlab-runner-setup.sh  pgadmin4-setup.sh  root-gitlab-setup.sh  run.py  venv-setup.ps1  venv-setup.sh
services/email-scheduler/: Dockerfile  README.md  gunicorn_config.py  pyproject.toml  requirements.txt
services/email-scheduler/backend/: api.py  async_send_message.py  main.py  message_sender.py  schemas.py
services/email-scheduler/database/: database.py  db.py  tables.py
services/email-scheduler/frontend/: index.html  info.html  style.css
services/link-preview/: README.md  pyproject.toml
services/shared-chat/: README.md  go.mod  main.go
template-apps/: README.md
template-apps/email-scheduler/: README.md
template-apps/notes-app/: Dockerfile  README.md
template-apps/notes-app/backend/: main.py
